MDEV-13721 Assertion is_lock_owner() failed in mysql_rm_table_no_locks

This happened when trying to do delete a sequence hidden by a temporary
table.
Fixed by ignoring non-sequence temporary tables when trying to drop
sequences.

Signed-off-by: Monty <monty@mariadb.org>